--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.9.8",
-    "socket.io": "^1.1.0"
+    "socket.io": "^1.1.0",
+    "colors": "*"
   }
 }
