--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.1",
   "description": "",
   "dependencies": {
-    "express": "^4.9.8",
-    "socket.io": "^1.1.0",
     "colors": "*",
+    "ejs": "^1.0.0",
+    "express": "^4.9.8",
     "formidable": "*",
-    "fs-extra": "*"
+    "fs-extra": "*",
+    "socket.io": "^1.1.0",
+    "ejs": "*"
   }
 }
