Ignore public/uploads

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ node_modules
 # Users Environment Variables
 .lock-wscript
 
-/uploads
+/public/uploads
 .sass-cache
 /public/css/*.css
 /public/css/*.css.map
