Added body-parser lib to the package.json.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "formidable": "*",
     "fs-extra": "*",
     "socket.io": "^1.1.0",
-    "ejs": "*"
+    "ejs": "*",
+    "body-parser": "*"
   }
 }
